# btp-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/btp_mcp_server/: __init__.py  __main__.py  btp_cli.py  server.py  server_expanded.py  utils.py
tests/: test_btp_cli.py  test_server.py
