[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btp-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for the SAP BTP CLI"
readme = "README.md"
authors = [
    { name = "Kallol Chakraborty", email = "your.email@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp[fastmcp]>=1.0.0",
    "pydantic>=2.0.0"
]


[project.scripts]
btp-mcp-server = "btp_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/btp_mcp_server"]
